Photo and video

--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
       </nav>
            <nav id="navigation">
       	<a href="links.html">Favorite link</a>
-          
+        <nav id="navigation">
+      	<a href="photos.html">Photos</a>
+        </nav>   
       </nav>
 	<h1>About Jamal Jaser</h1>
     <h4>Class of 2015</h4>
