--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <nav id="navigation">
       	<a href="links.html">Favorite links</a>
         </nav>
-      
+       <nav id="navigation">
+      	<a href="photos.html">Photos</a>
+        </nav>
       <a href="#U_Mad?" id="Top"> My Link </a>
 <h1>Jamal Jaser</h1>
       
