--- a/about.html
+++ b/about.html
@@ -6,16 +6,14 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-      <nav id="navigation">
-      	<a href="index.html">Home</a>
-          
-      </nav>
-           <nav id="navigation">
-      	<a href="links.html">Favorite link</a>
-        <nav id="navigation">
-      	<a href="photos.html">Photos</a>
-        </nav>   
-      </nav>
+<nav id="navigation">
+      <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="links.html">Favorite link</a></li>
+      <li><a href="photos.html">Photos</a></li> 
+      <li><a href="videos.html">Videos</a></li>
+      </ul>
+      </nav>   
 	<h1>About Jamal Jaser</h1>
     <h4>Class of 2015</h4>
       
