--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
   </head>
   <body>
       <nav id="navigation">
-      	<a href="about.html">About me</a>
-          
+      <ul>
+      <li><a href="about.html">About me</a></li>
+      <li><a href="links.html">Favorite link</a></li>
+      <li><a href="photos.html">Photos</a></li> 
+      <li><a href="videos.html">Videos</a></li>
+      </ul>
       </nav>
-        <nav id="navigation">
-      	<a href="links.html">Favorite links</a>
-        </nav>
-       <nav id="navigation">
-      	<a href="photos.html">Photos</a>
-        </nav>
       <a href="#U_Mad?" id="Top"> My Link </a>
 <h1>Jamal Jaser</h1>
       
