--- a/photos.html
+++ b/photos.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-	<nav id="navigation">
-      	<a href="index.html">Home</a>
-  </nav>
-      <nav id="navigation">
-      	<a href="about.html">About me</a>
-          </nav>
-           <nav id="navigation">
-      	<a href="links.html">Favorite link</a>
-       </nav>
+<nav id="navigation">
+      <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About me</a></li>
+      <li><a href="links.html">Favorite link</a></li>
+      <li><a href="videos.html">Videos</a></li>
+      </ul>
+      </nav>
       
       <h1>Photos</h1>
       <img src="http://hdw.datawallpaper.com/cars/wald-international-nissan-gtr-299578.jpg" title="Dat GTR" hight="720px" width="1250px">
