--- a/photos.html
+++ b/photos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-<nav id="navigation">
+<nav class="page-navigation" id="navigation">
       <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About me</a></li>
