--- a/links.html
+++ b/links.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf8" />
     <title>My Page</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <nav class="page-navigation" id="navigation">
@@ -16,7 +16,7 @@
       </nav>
       
       <h1>Favorite links</h1>
-      <ul>
+      <ul class="links">
           <li><a href="http://www.youtube.com">Youtube</a></li>
           <li><a href="http://www.gamestop.com">Gamestop</a></li>
           <li><a href="http://www.ebay.com">Ebay</a></li>
