--- a/videos.html
+++ b/videos.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf8" />
     <title>Videos</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-  </head>
-  <body id="top">
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    </head>
+   <body id="top">
 <nav class="page-navigation" id="navigation">
       <ul>
       <li><a href="index.html">Home</a></li>
@@ -14,7 +14,7 @@
       <li><a href="photos.html">Photos</a></li> 
       </ul>
       </nav>
-      
+       <h1 class="videos-title">Videos</h1>
       
       <iframe width="560" height="315" src="//www.youtube.com/embed/0HDdjwpPM3Y?list=PLFgquLnL59amJeDIkTnKvncL2Mij-93kw" frameborder="0" allowfullscreen></iframe>
       <iframe width="420" height="315" src="//www.youtube.com/embed/b89CnP0Iq30" frameborder="0" allowfullscreen></iframe>
