--- a/css_practice.html
+++ b/css_practice.html
@@ -6,16 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body id="top">
-      <h1>Title</h1>
-      <nav id="navigation">
-      <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About me</a></li>
-      <li><a href="links.html">Favorite link</a></li>
-      <li><a href="photos.html">Photos</a></li> 
-      <li><a href="videos.html">Videos</a></li>
-      </ul>
-      </nav>
+      <div class="container">
+     <header class="main-header"> header </header>
        <h1>This is my practice time</h1>
 
   <h3>Here's a subtitle</h3>
@@ -41,7 +33,8 @@
 
       
        <a href="#top">Back to top</a>
-  </body>
+  </div>
+    </body>
 </html>
 
 
