--- a/css_practice.html
+++ b/css_practice.html
@@ -7,7 +7,8 @@
   </head>
   <body id="top">
       <div class="container">
-     <header class="main-header"> header </header>
+      <header class="main-header base"> Header </header>
+      <div class="main-container">
        <h1>This is my practice time</h1>
 
   <h3>Here's a subtitle</h3>
@@ -17,15 +18,15 @@
   <p> classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 
 
-  <ul>
+    
     <li>This is a list</li>
     <li>This is another</li>
     <li>This is the third</li>
     <li>This is the fourth</li>
   </ul>
-
+  
       <br>
-            <br>
+      <br>
       <br>
       <br>
       <br>
@@ -33,7 +34,9 @@
 
       
        <a href="#top">Back to top</a>
-  </div>
+  </div><!--end div.main-content-->
+    <footer class="main-footer base">Footer</footer>
+  </div><!--end div.container-->
     </body>
 </html>
 
