--- a/template.html
+++ b/template.html
@@ -23,9 +23,29 @@
   </body>
 </html>
 
+TEMP2
 
-
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf8" />
+    <title>My Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body id="top">
+      <div class="container">
+        <div class="main-header"></div>
+         
+        <div class="main-content"></div>
+          <div class="side-bar"></div>
+          <div class="content"></div>
+        </div>
+        <div class="main-footer"></div>
+        </div>
+      
+       <a href="#top">Back to top</a>
+  </body>
+</html>
 
 
 
