--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
   </head>
   <body id="top">
       <h1>Title</h1>
-      <nav id="navigation">
+      <nav class="navigation">
       <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About me</a></li>
@@ -20,6 +20,21 @@
       
       
        <a href="#top">Back to top</a>
+  </body>
+</html>
+
+!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf8" />
+    <title>My Page</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+  </head>
+  <body>
+
+
+
+
   </body>
 </html>
 
